--- a/Matrix/Matrix.cbp
+++ b/Matrix/Matrix.cbp
@@ -31,7 +31,53 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="main.c">
+		<Unit filename="../A2Matrix.h" />
+		<Unit filename="../About.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../AddSubProduct.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../Contain.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../Control.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../DelRC_to_make_coFactor.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../Det.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../Equal.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../Main.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../MatrixIO.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../MinMax.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../RelationFactor.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../Symmetry,Skew-symmetry.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../Thesame.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../Transpose.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../UserGuide.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../Welcome.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Extensions>
